--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
       <!-- Social media icons-->
       <div class="fixed-block block-right ">
         <ul class="list-unstyled social-icons list-inline ">
-          <li><a href="https://twitter.com/mk_d0007" target="_blank"><i class="icon ion-logo-twitter"></i></a></li>
+          <li><a href="https://x.com/mk_d0007" target="_blank"><i class="icon ion-logo-twitter"></i></a></li>
           <li><a href="https://m.facebook.com/mkd0007" target="_blank"><i class="icon ion-logo-facebook"></i></a></li>
-          <li><a href="https://www.linkedin.com/in/mkd0007/" target="_blank"><i class="icon ion-logo-linkedin"></i></a></li>
-          <li><a href="https://www.github.com/mk-ong007/" target="_blank"><i class="icon ion-logo-github"></i></a></li>
-          <li><a href="https://www.instagram.com/mk_d007/" target="_blank"><i class="icon ion-logo-instagram"></i></a></li>
+          <li><a href="https://in.linkedin.com/in/manish-dholpuriya" target="_blank"><i class="icon ion-logo-linkedin"></i></a></li>
+          <li><a href="https://github.com/manish-dholpuriya" target="_blank"><i class="icon ion-logo-github"></i></a></li>
+          <li><a href="https://www.instagram.com/mk_d007" target="_blank"><i class="icon ion-logo-instagram"></i></a></li>
           <li><a href="https://www.youtube.com/channel/UC6qF_PVhB_Wi03PpFdqEMRw" target="_blank"><i class="icon ion-logo-youtube"></i></a></li>
         </ul>
       </div>
